chore(migrations): add migrations, add migrations to dockerfile and fix swagger adnotations
