# controllers/privilege.go
@@ -16,7 +16,8 @@ type PrivilegeController struct {
 // @Title GetAll
 // @Description Get all Privileges
 // @Success 200 {object} models.Privilege
-// @Failure 404 {string} error: "message"
+// @Failure 401 {string} error: "Unauthenticated, please log in!"
+// @Failure 500 {string} error: "message"
 // @Accept json
 // @router / [get]
 func (p *PrivilegeController) GetAll() {
