# swagger/swagger.yml
@@ -98,7 +98,9 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Car'
-        "404":
+        "401":
+          description: '{string} error: "Unauthenticated, please log in!"'
+        "500":
           description: '{string} error: "message"'
     post:
       tags:
@@ -326,7 +328,9 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Privilege'
-        "404":
+        "401":
+          description: '{string} error: "Unauthenticated, please log in!"'
+        "500":
           description: '{string} error: "message"'
     post:
       tags:
@@ -454,7 +458,9 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Role'
-        "404":
+        "401":
+          description: '{string} error: "Unauthenticated, please log in!"'
+        "500":
           description: '{string} error: "message"'
     post:
       tags:
@@ -582,7 +588,9 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.User'
-        "404":
+        "401":
+          description: '{string} error: "Unauthenticated, please log in!"'
+        "500":
           description: '{string} error: "message"'
     post:
       tags:
